k8s/manifests/apps/mealie/mealie.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    gateway.infra.services/allow-routes: "true"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mealie
  annotations:
    ignore-check.kube-linter.io/env-var-secret: "it's setting the file to read the secret from"
spec:
  replicas: 1
  template:
    spec:
      automountServiceAccountToken: false
      hostUsers: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      containers:
        - name: main
          image: ghcr.io/mealie-recipes/mealie:v3.27.0
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: oidc-client
              mountPath: /var/run/secrets/oidc
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: http
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 300Mi
            limits:
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: oidc-client
          secret:
            secretName: oidc-client
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
      appProtocol: http
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: recipes
  labels:
    external-dns: "true"
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Recipes
    gethomepage.dev/icon: mealie
    gethomepage.dev/group: Apps
    gethomepage.dev/pod-selector: app.kubernetes.io/name=mealie
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: []
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mealie
          port: 80
